--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,30 +1,101 @@
 body{
+	position: relative;
 	margin: 0;
 	padding: 0;
 	height: 100%;
+	overflow: hidden;
 }
 
 p{	
-	width: 300px;
+	position: relative;
+	width: 760px;
+	/* height: 200px; */
 	margin: auto;
+	margin-top: 100px;
+	padding: 20px;
 	column-count: 3;
 	column-gap:100px;
 	column-rule: 4px dashed lightblue;
-
 }
 
 
 .slider{
-	position: absolute;
+	position: relative;
+	margin: auto;
+	top: 40px;
 	width: 200px;
 	height: 10px;
-	border: 1px solid red;
-	box-sizing: border-box;
+	background: white;
+	border:20px solid lightblue;
 }
+.slider:after{
+	content: ' ';
+	position: absolute;
+	top:-20px;
+	left:-20px;
+	width: 240px;
+	height: 50px;
+	border: 1px solid rgba(108, 185, 210, 1);
+	box-sizing: border-box;
+	z-index: 0;
+}
+
+.slider__name{
+	position: relative;
+	top: -40px;
+	text-align: center;
+}
+
 .slider__marker{
 	position: absolute;
+	top: -10px;
 	width: 10px;
-	height: 10px;
-	border: 1px solid red;
+	height: 30px;
+	background: lightblue;
+	z-index: 1;
+}
+.slider__marker:before{ 
+	/* rectangle for drag*/
+	content: '';
+	position: absolute;
+	width: 500%;
+	left:-200%;
+	height: 100%;
+	border:1px solid transparent;
 	box-sizing: border-box;
+	cursor: pointer;
+}
+.slider__marker:after{
+	content: ' ';
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	box-sizing: border-box;
+	background-color: white;
+	background-image: linear-gradient(90deg, rgba(0,0,0, 0.1) ,  rgba(0,0,0, 0) 41%), 
+					  linear-gradient(-90deg, rgba(0,0,0, 0.1) , rgba(0,0,0, 0) 50%);
+}
+
+
+
+.blocks-wrapper{
+	position: relative;
+	margin: auto;
+	margin-top: 100px;
+	width: 700px;
+	text-align: center;
+	border:1px dashed lightblue;
+}
+.block{
+	position: relative;
+	display: inline-block;
+	width: 200px;
+	height: 100px;
+	border: 1px solid;
+	margin: 10px;
+	box-sizing: border-box;
+}
+.block__img{
+	width:100%;
+	height: 100%;
 }
