--- a/slider-h/slider-h.css
+++ b/slider-h/slider-h.css
@@ -1,19 +1,32 @@
 .slider-h{
 	position: relative;
 	margin: auto;
-	top: 40px;
+	margin-top: 50px;
 	width: 200px;
 	height: 10px;
 	background: white;
 	border:20px solid lightblue;
 }
+.slider-h:before{
+	content:attr(data-value);
+	position: absolute;
+	width:50px;
+	height: 50px;
+	top: -10px;
+	left: -50px;
+	opacity: 0;
+	transition: 1s;	
+}
+.slider-h:hover:before{
+	opacity: 1;
+}
 .slider-h:after{
 	content: ' ';
 	position: absolute;
-	top:-20px;
-	left:-20px;
-	width: 240px;
-	height: 50px;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 	border: 1px solid rgba(108, 185, 210, 1);
 	box-sizing: border-box;
 	z-index: 0;
@@ -23,6 +36,8 @@
 	position: relative;
 	top: -40px;
 	text-align: center;
+	text-transform: uppercase;
+	color: rgba(108, 185, 210, 1);
 }
 
 .slider-h__marker{
@@ -30,8 +45,8 @@
 	top: -10px;
 	width: 10px;
 	height: 30px;
-	background: lightblue;
 	z-index: 1;
+	cursor: pointer;
 }
 .slider-h__marker:before{ 
 	/* rectangle for drag*/
