--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,66 +18,6 @@ p{
 	column-rule: 4px dashed lightblue;
 }
 
-
-.slider{
-	position: relative;
-	margin: auto;
-	top: 40px;
-	width: 200px;
-	height: 10px;
-	background: white;
-	border:20px solid lightblue;
-}
-.slider:after{
-	content: ' ';
-	position: absolute;
-	top:-20px;
-	left:-20px;
-	width: 240px;
-	height: 50px;
-	border: 1px solid rgba(108, 185, 210, 1);
-	box-sizing: border-box;
-	z-index: 0;
-}
-
-.slider__name{
-	position: relative;
-	top: -40px;
-	text-align: center;
-}
-
-.slider__marker{
-	position: absolute;
-	top: -10px;
-	width: 10px;
-	height: 30px;
-	background: lightblue;
-	z-index: 1;
-}
-.slider__marker:before{ 
-	/* rectangle for drag*/
-	content: '';
-	position: absolute;
-	width: 500%;
-	left:-200%;
-	height: 100%;
-	border:1px solid transparent;
-	box-sizing: border-box;
-	cursor: pointer;
-}
-.slider__marker:after{
-	content: ' ';
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	box-sizing: border-box;
-	background-color: white;
-	background-image: linear-gradient(90deg, rgba(0,0,0, 0.1) ,  rgba(0,0,0, 0) 41%), 
-					  linear-gradient(-90deg, rgba(0,0,0, 0.1) , rgba(0,0,0, 0) 50%);
-}
-
-
-
 .blocks-wrapper{
 	position: relative;
 	margin: auto;
@@ -99,3 +39,11 @@ p{
 	width:100%;
 	height: 100%;
 }
+
+.b-width-ctrl{
+	width: 120px;
+}
+.b-width-ctrl__name{
+	color: blue;
+}
+
