--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,19 +22,27 @@ footer{
 	line-height: 100px;
 }
 
-.layout{
+.flex-container{
 	width:  80%;
+	height: 50%;
+	border:  1px solid;
+	margin: auto;
+
+
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: stretch;
+	align-items: center;
+	align-content: stretch;
+}
+
+.flex-block{
+	margin: 5px;
 	min-width: 100px;
-	margin: 0 auto;
+	padding:  20px;
+	border:  1px dashed red;
+	box-sizing: border-box;
+
+	flex-grow: 1;
 }
-.column{
-	width: 100%;
-	column-count: 3;
-	column-rule: 3px solid red;
-	column-gap: 40px;
-}
-
-
-
-
 
