--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,171 +1,57 @@
 body{
 	margin: 0;
 	padding: 0 15px;
-	background:  #ccc;
+	background:  #fff;
 	min-height: 100%;
-	min-width: 100%;
 	font-family: sans-serif;
-
-	display: flex;
-	flex-direction: column;
 }
 
-img{
-	max-width: 100%;
-	height: auto;
+
+.container{
+	width: 100%;
+	/* max-width: 560px; */
+	margin: auto;
+	border: 1px solid red;
+
+	display: grid;
+	grid-template-areas: "header  nav"
+						 "main main"
+						 "footer footer";	
 }
 
-header, footer, main{
-	/* border:  1px dashed red; */
+header,
+nav,
+main,
+footer{
+	padding: 1em;
+	color: #f1c79a;
+	font-size: 3em;
 }
 
 header{
-	width: 100%;
-	max-width: 960px;
-	min-width: 430px;
-	margin: 0 auto 30px;
-	padding: 10px;
-	box-sizing: border-box;
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: space-between;
-	align-items: baseline;
+	background-color: #0e2d21;
+	grid-area: header;
+}
+
+nav{
+	background-color: #38876f;
+	grid-area: nav;
+}
+nav ul{
+	list-style-type: none;
+}
+nav a{
+	text-decoration: none;
+	color: white;
 }
 
 main{
-	position: relative;
-	width: 100%;
-	max-width: 960px;
-	min-width: 430px;
-	margin: auto;
-	flex-grow: 1;
-	box-sizing: border-box;
+	background-color: #646e74 ;
+	height: 600px;
+	grid-area: main;
 }
 
 footer{
-	width: 100%;
-	max-width: 960px;
-	min-width: 430px;
-	color: #eee;
-	margin: auto;
-	padding: 15px;
-	box-sizing: border-box;
-	position: relative;
-
-	display: inline-flex;
-	flex-flow:  row nowrap;
+	background-color: #1c1f20 ;
+	grid-area: footer;
 }
-
-/* Logo */
-	.logo{
-		font-size: 0;
-		margin:  0px 10px 10px 0px;
-		display: flex;
-		flex:  none;
-		align-items: center;
-	}
-	.logo::before, .logo::after{
-		content: '';
-		display: block;
-	}
-	.logo::before{
-		background: #222;
-		width: 50px;
-		height: 50px;
-		margin: 0 10px 0 20px;
-		border-radius: 50%;
-	}
-	.logo::after{
-		background: #222;
-		width: 90px;
-		height: 30px;
-	}
-	.logo--header{
-	}
-/*------*/
-
-/* nav */
-	.nav{
-		display: flex;
-		flex-wrap: nowrap;
-	}
-	.nav--header{}
-
-	.nav__item{
-		background: #222;
-		width:  130px;
-		height: 50px;
-		margin: 5px 0 0 5px;
-	}
-	.nav__item--header{}
-
-/*------*/
-
-/* main block */
-	.main-block{
-		font-style: italic;
-		margin: 0 0 40px 0px;
-
-		display: flex;
-		flex-flow: row wrap;
-		justify-content: ;
-	}
-
-	.main-block__text{
-		flex: 1 0 400px;
-	}
-
-	.main-block__side{
-		padding: 20px;
-		display: flex;
-		flex-flow: row wrap;
-		justify-content: center;
-		align-items: center;
-		align-content: center;
-	}
-
-	.main-block__img{
-		max-width: 100%;
-		width: 400px;
-	}
-/*------*/
-
-/* footer */
-.footer-block{
-	/* border: 1px dashed red; */
-	padding: 0 20px;
-	position: relative;
-	overflow: hidden;
-}
-.footer-block h1{
-	font-size: 12px;
-}
-
-.footer-block__img-link{
-	width: 100%;
-	overflow: hidden;
-	margin: 25px 0px;
-
-}
-
-.footer-block__article-link{
-	height: 100px;
-	overflow: hidden;
-	margin: 25px 20px;
-
-
-}
-.footer-block__article-link--with-logo{
-	position:  relative;
-	height: 100px;
-	overflow: hidden;
-	margin: 25px 20px;
-	padding: 20px 0;	
-}
-.footer-block__article-link--with-logo::before{
-	content: 'LOGO';
-	color: black;
-	position:  absolute;
-	top: 0;
-}
-/*------*/
