--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,57 +1,154 @@
+*{
+	box-sizing: border-box;
+}
+
 body{
-	margin: 0;
+	margin: auto;
 	padding: 0 15px;
 	background:  #fff;
-	min-height: 100%;
+	height: 100%;
 	font-family: sans-serif;
-}
-
-
-.container{
 	width: 100%;
-	/* max-width: 560px; */
-	margin: auto;
-	border: 1px solid red;
+	max-width: 960px;
 
 	display: grid;
-	grid-template-areas: "header  nav"
-						 "main main"
-						 "footer footer";	
-}
-
-header,
-nav,
-main,
-footer{
-	padding: 1em;
-	color: #f1c79a;
-	font-size: 3em;
+	grid-template-areas: "header"
+						 "main"
+						 "footer";
 }
 
 header{
-	background-color: #0e2d21;
 	grid-area: header;
+	min-height: 100px;
+	width: 100%;
+	
+	display: flex;
+	flex-flow: row wrap;
+	/* justify-content: space-between; */
+	justify-content: space-around;
+	/* align-items: center; */
+	/* align-content: center; */
+	/* justify-content: center; */
 }
 
-nav{
-	background-color: #38876f;
-	grid-area: nav;
-}
-nav ul{
-	list-style-type: none;
-}
-nav a{
-	text-decoration: none;
-	color: white;
-}
+/* inside header */
+	.logo{
+		/* width: 135px; */
+		line-height: 50px;
+		padding: 10px;
+		text-align: center;
+		white-space: nowrap;
+
+		display: inline-block;
+	}
+	.logo::before{
+		content: '';
+		display: inline-block;
+		width: 50px;
+		height: 50px;
+		border-radius: 50%;
+		background:  #222;
+	}
+	.logo::after{
+		content: '';
+		display: inline-block;
+		position: relative;
+		top: -10px;
+		margin-left: 10px;
+		width: 170px;
+		height: 30px;
+		background:  #222;
+	}
+	
+
+	nav{
+		display: inline-block;	
+		padding: 10px;
+		line-height: 50px;
+		white-space: nowrap;
+	}
+
+	/* inside nav */
+		.nav-item{
+			display: inline-block;
+			width: 100px;
+			height: 30px;
+			line-height: 30px;
+			color:  white;
+			background: #222;
+			text-align: center;
+		}
+
+	/*------------*/
+/*---------------*/
+
 
 main{
-	background-color: #646e74 ;
-	height: 600px;
 	grid-area: main;
+	background: white;
+	min-height: 100px;
+	width: 100%;
+	padding: 40px;
+
+	display: flex;
+	flex-flow: row wrap-reverse;
+	justify-content: space-around;
+	/* align-items: center; */
+	/* align-content: center; */
+
 }
 
+/* inside main */
+	main .text-block{
+		flex: 1 0 300px;
+		margin-right: 10px;
+	}
+	main .image-block{
+		width: 300px;
+		height: 300px;
+		border-radius: 50%;
+		background: #222;
+		margin:  auto;
+	}
+
+/*-------------*/
+
 footer{
-	background-color: #1c1f20 ;
 	grid-area: footer;
+	min-height: 100px;
+	width: 100%;
 }
+
+/* inside footer */
+	.row{
+		margin-bottom: 10px;
+
+		display: flex;
+		flex-flow: row-reverse wrap-reverse;
+		justify-content: space-around;
+		align-items: flex-end;
+	}
+
+	footer .image-block{
+		padding: 20px;
+	}
+	footer .image-block::before{
+		content: '';
+		display: inline-block;
+		width: 200px;
+		height: 140px;
+		background: #222;
+	}
+
+	footer .text-block{
+		padding: 20px;
+		flex: 2 0 200px;
+	}
+
+	footer .text-block--logo{
+		padding: 20px;
+		flex: 1 0 200px;
+	}
+
+
+/*---------------*/
